@startuml

title __WEBVIEW's Class Diagram__\n

  namespace com.example.meiyong {
    namespace webview {
      class com.example.meiyong.webview.MAWebViewWrapper {
          - mapWebViewClient : WebViewClient
          - webView : WebView
          + MAWebViewWrapper()
          + addAMapJavascriptInterface()
          + addView()
          + evaluateJavascript()
          + getHeight()
          + getWidth()
          + loadUrl()
          + setWebViewClient()
      }
    }
  }
  

  namespace com.example.meiyong {
    namespace webview {
      class com.example.meiyong.webview.MyWebView {
          + MyWebView()
          + MyWebView()
          + MyWebView()
          - initBridgeWebView()
      }
    }
  }
  

  namespace com.example.meiyong {
    namespace webview {
      class com.example.meiyong.webview.WebviewMapActivity {
          - aMapWrapper : AMapWrapper
          - addMapButton : Button
          - initButton : Button
          - isAdded : boolean
          - isCreated : boolean
          - latlng : LatLng
          - mainLayout : LinearLayout
          + onClick()
          # onCreate()
          # onDestroy()
      }
    }
  }
  

  namespace com.example.meiyong {
    namespace webview {
      class com.example.meiyong.webview.WebviewTestActivity {
          - mainLayout : LinearLayout
          # onCreate()
      }
    }
  }
  

  com.example.meiyong.webview.MAWebViewWrapper .up.|> com.amap.api.maps.IAMapWebView
  com.example.meiyong.webview.MyWebView -up-|> android.webkit.WebView
  com.example.meiyong.webview.WebviewMapActivity .up.|> android.view.View.OnClickListener
  com.example.meiyong.webview.WebviewMapActivity -up-|> android.app.Activity
  com.example.meiyong.webview.WebviewMapActivity o-- com.example.meiyong.webview.MyWebView : webView
  com.example.meiyong.webview.WebviewMapActivity o-- com.example.meiyong.webview.MAWebViewWrapper : webViewWrapper
  com.example.meiyong.webview.WebviewTestActivity -up-|> android.app.Activity
  com.example.meiyong.webview.WebviewTestActivity o-- com.example.meiyong.webview.MyWebView : webView


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
